--- a/recipes/SloppyJoe.html
+++ b/recipes/SloppyJoe.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Sloppy Joe</h1>
 
-    <img src ="./SloppyJoe.jpg" alt = "Picture of said Mexican Lasagna" height ="750" width = "750">
+    <img src ="./SloppyJoe.jpg" alt = "Picture of said SloppyJoe" height ="750" width = "750">
     <h2>Description:</h2>
     <p>A Sloppy Joe is a sandwich consisting of ground beef and onions in a tomato-based sauce served on a hamburger bun. </p>
 
