--- a/recipes/MexicanLasagna.html
+++ b/recipes/MexicanLasagna.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MexicanLasagna</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <h1>Mexican Lasagna</h1>
+    <h1 class = "header">Mexican Lasagna</h1>
 
-    <img src ="./MexicanLasagna.jpg" alt = "Picture of said Mexican Lasagna" height ="750" width = "750">
-    <h2>Description:</h2>
-    <p>This is a traditional dish in my family. Anyone can make it really. It is composed of traditional Mexican ingredients 
+    <img class = "img" src ="./MexicanLasagna.jpg" alt = "Picture of said Mexican Lasagna" >
+    <h3 class = " description header">Description:</h3>
+    <p class = "description">This is a traditional dish in my family. Anyone can make it really. It is composed of traditional Mexican ingredients 
     layered over the top of one another in a lasagna-like fashion (hence the name) but has little similarity to lasagna, so lasagna haters have no fear!</p>
 
-    <h3>Ingredients:</h3>
-    <ul> 
+    <div class = "meat">
+    <h3 class = "header">Ingredients:</h3>
+    <ul class = "recipe"> 
         <li>1 ½ pounds ground beef</li>
         <li>¼ cup water</li>
         <li>1 (1 ounce) packet taco seasoning mix</li>
@@ -25,8 +27,8 @@
         <li>1 cup shredded Colby-Jack cheese</li>
     </ul>
 
-    <h3>Steps:</h3>
-    <ol>
+    <h3 class = "header">Steps:</h3>
+    <ol class = "steps">
         <li>Preheat oven to 350 degrees F (175 degrees C). Grease a 9x13-inch casserole dish.</li>
         <li>Heat a large skillet over medium-high heat and stir in ground beef. Cook and stir until beef is crumbly, evenly browned,
             and no longer pink, about 10 minutes. Drain and discard any excess grease. Add water and taco seasoning; cook and stir 
@@ -40,6 +42,6 @@
         <li>Turn on oven's broiler. </li>
         <li>Place lasagna under the broiler until Colby-Jack cheese is melted and bubbling, 3 to 5 minutes. </li>
     </ol>
-
+    </div>
 </body>
 </html>
