--- a/recipes/ShortBreadCookies.html
+++ b/recipes/ShortBreadCookies.html
@@ -4,28 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShortBreadCookies</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <h1>ShortBread Cookies</h1>
+    <h1 class = "header">ShortBread Cookies</h1>
 
-    <img src ="./ShortBreadCookies.jpg" alt = "Picture of said Cookies" height ="750" width = "750">
-    <h2>Description:</h2>
-    <p>Shortbread cookies originated in Scotland and are traditionally made with butter, sugar, and flour. 
+    <img class = "img" src ="./ShortBreadCookies.jpg" alt = "Picture of said Cookies" >
+    <h3 class = "description header">Description:</h3>
+    <p class = "description">Shortbread cookies originated in Scotland and are traditionally made with butter, sugar, and flour. 
         Unlike other cookies, shortbread cookies don't have any leavening agents (like baking powder or baking soda). 
         Because of this (plus the high fat content) shortbread cookies are incredibly tender and crumbly — a 
         good shortbread cookie will almost melt in your mouth. 
     </p>
 
-    <h3>Ingredients:</h3>
-    <ul> 
+    <div class = "meat">
+    <h3 class = "header">Ingredients:</h3>
+    <ul class = "recipe"> 
         <li>2 Cups butter, softened</li>
         <li>1 cup White Sugar</li>
         <li>2 teaspoons vanilla extract</li>
         <li>4 cups All purpose flour</li>
     </ul>
 
-    <h3>Steps:</h3>
-    <ol>
+    <h3 class = "header">Steps:</h3>
+    <ol class = "steps">
         <li>Gather all ingredients. </li>
         <li>Preheat the oven to 350 degrees F (180 degrees C). </li>
         <li>Beat softened butter and sugar together in a large bowl with an electric mixer until light and fluffy. </li>
@@ -37,5 +39,6 @@
             Then transfer the shortbread cookies to the rack to cool completely. 
         </li>
     </ol>
+    </div>
 </body>
 </html>
