--- a/recipes/SloppyJoe.html
+++ b/recipes/SloppyJoe.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SloppyJoe</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <h1>Sloppy Joe</h1>
+    <h1 class = "header">Sloppy Joe</h1>
 
-    <img src ="./SloppyJoe.jpg" alt = "Picture of said SloppyJoe" height ="750" width = "750">
-    <h2>Description:</h2>
-    <p>A Sloppy Joe is a sandwich consisting of ground beef and onions in a tomato-based sauce served on a hamburger bun. </p>
+    <img class = "img" src ="./SloppyJoe.jpg" alt = "Picture of said SloppyJoe">
+    <h3 class = "description header">Description:</h3>
+    <p class = "description">A Sloppy Joe is a sandwich consisting of ground beef and onions in a tomato-based sauce served on a hamburger bun. </p>
 
-    <h3>Ingredients:</h3>
-    <ul> 
+    <div class = "meat">
+    <h3 class = "header">Ingredients:</h3>
+    <ul class = "recipe"> 
         <li>1 Pound ground beef</li>
         <li>1 Medium onion</li>
         <li>1 Medium green pepper</li>
         <li>Hamburger buns</li>
     </ul>
 
-    <h3>Steps:</h3>
-    <ol>
+    <h3 class = "header">Steps:</h3>
+    <ol class = "steps">
         <li>Dice Half of the onion, and the whole Green Pepper.</li>
         <li>Cook beef, onion, and green pepper together.</li>
         <li>Drain the liquid from the meat and veggies.</li>
         <li>Add salt pepper and other seasonings to taste.</li>
     </ol>
+    </div>  
 </body>
 </html>
